// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes class when hovered 1`] = `
<a
  className="normal"
  href="mailto:michal.cesarczyk@gmail.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Link changes class when hovered 2`] = `
<a
  className="hovered"
  href="mailto:michal.cesarczyk@gmail.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Link changes class when hovered 3`] = `
<a
  className="normal"
  href="mailto:michal.cesarczyk@gmail.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;
